fix valign, add sign up template

--- a/materialize/css/style.css
+++ b/materialize/css/style.css
@@ -1,4 +1,6 @@
-.login-wrapper {
+html, body, 
+
+.form-wrapper {
 	height: 100%;
 }
 
